--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<script src='main.js'></script>
 
     <div id="mainOutput"></div>
+    <div id="totalJobsOutput"></div>
     <script src="main.js"></script>
 </body>
 </html>
