Visa sparade annonser-button in index

--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
 </head>
 <body>
 
-	<div id="headingOutput"></div>
+	<div id="headingOutput">
+	    <button id="showSavedAds">Visa sparade annonser</button>
+	</div>
 	<script src='main.js'></script>
 
     <div id="mainOutput"></div>
     <div id="totalJobsOutput"></div>
+    <div id="savedAdsOutput"></div>
+    
     <script src="main.js"></script>
 </body>
 </html>
