--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
     <title>Platsbanken API</title>
 </head>
 <body>
+    <button id="showSavedAds">Visa sparade annonser</button>
 
-	<div id="headingOutput">
-	    <button id="showSavedAds">Visa sparade annonser</button>
-	</div>
+	<div id="headingOutput"></div>
 	<script src='main.js'></script>
 
     <div id="mainOutput"></div>
