--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Platsbanken API</title>
 </head>
 <body>
-    <button id="showSavedAds">Visa sparade annonser</button>
+    <button type"button" id="showSavedAds">Visa sparade annonser</button>
 
 	<div id="headingOutput"></div>
 	<script src='main.js'></script>
@@ -16,7 +16,7 @@
     <div id="mainOutput"></div>
     <div id="totalJobsOutput"></div>
     <div id="savedAdsOutput"></div>
-    
+
     <script src="main.js"></script>
 </body>
 </html>
