--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
     <title>Platsbanken API</title>
 </head>
 <body>
-    <button id="showSavedAds">Visa sparade annonser</button>
-    
-    <form>
-        <input type="text" id="searchField" class="searchField" placeholder="Sök efter ett yrke">
-        <button id="search" class="searchButton">Sök</button>
-    </form>
+    <div>
+        <button id="showSavedAds">Visa sparade annonser</button>
+
+        <form>
+            <input type="text" id="searchField" class="searchField" placeholder="Sök efter ett yrke">
+            <button id="searchButton">Sök</button>
+        </form>
+    </div>
 
 	<div id="headingOutput"></div>
-	<script src='main.js'></script>
 
     <div id="mainOutput"></div>
     <div id="totalJobsOutput"></div>
