made professional categories in the right sidebar

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                 <input type="text" id="searchField" class="searchField" placeholder="Sök efter ett yrke">
                 <button id="searchButton">Sök</button>
             </form>
+            <div class="categories">
+            	<ul id="categoriesUl"></ul>
+            </div>
             
         </div>
     </div>
