added functions fetchByCounty and createOptionForSelector

--- a/index.html
+++ b/index.html
@@ -12,9 +12,24 @@
         <header id = "topHeader">
             <div id = "selectorsWrapper">
                 <select id = "selectQuantity">
+                    <option value = "10">
+                        10
+                    </option>
+                    <option value = "20">
+                        20
+                    </option>
+                    <option value = "30">
+                        30
+                    </option>
                 </select>
+                <label for = "selectCounty">
+                    Välj län: 
+                </label>
                 <select id = "selectCounty">
                 </select>
+                <label for = "selectCategory">
+                    Välj kategori:
+                </label>
                 <select id = "selectCategory">
                 </select>
             </div>
