added function getselectedid, fetchcountysearchlist, displayselectedcounty

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <main>
         <header id = "topHeader">
             <div id = "selectorsWrapper">
+                <label for = "selectQuantity">
+                    Välj antal annonser:
+                </label>
                 <select id = "selectQuantity">
                     <option value = "10">
                         10
