--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <button id="showSavedAds">VISA SPARADE ANNONSER</button>
                 <form>
                     <input type="text" id="searchField" class="searchField" placeholder="Sök efter ett yrke">
-                    <button id="searchButton">Sök</button>
+                    <button type="button" id="searchButton">Sök</button>
                 </form>
                 <div class="categories">
                     <ul id="categoriesUl"></ul>
