edited searchjob function

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
                 </select>
                 <select id="selectCounty">
-                <option>KOMMUN</option>
+                <option>LÄN</option>
                 </select>
                 <select id="selectCategory">
                 <option>KATEGORI</option>
