--- a/index.html
+++ b/index.html
@@ -50,14 +50,13 @@
 
             <div class="right">
                 <button id="showSavedAds">VISA SPARADE ANNONSER</button>
-                <form>
+                <form id = "searchJob">
                     <input type="text" id="searchField" class="searchField" placeholder="Sök efter ett yrke">
                     <button type="button" id="searchButton">Sök</button>
                 </form>
                 <div class="categories">
                     <ul id="categoriesUl"></ul>
                 </div>
-
             </div>
         </div>
     </main>
