working on municipality

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
                 <select id="selectCounty">
                 <option>LÄN</option>
                 </select>
+                <select id="selectMunicipality">
+                <option>KOMMUN</option>
+                </select>
                 <select id="selectCategory">
                 <option>KATEGORI</option>
                 </select>
