Less wierd when local storage is empty..

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <button type="button" id="searchButton">Sök</button>
         </form>
 
-        <div class="wrapper">
+        <div class="wrapper" id="wrapper">
 
             <div class="left">
                 <div id="headingOutput"></div>
