--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main>
         <header id="topHeader">
 
-            <div id=logo><img src="images/vit.png"></div>
+            <a href="index.html"><div id=logo><img src="images/vit.png"></div></a>
             <div id="selectorsWrapper">
                 <select id="selectQuantity">
 
