autocomplete functions are working but display is not

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 
         </header>
 
-        <form id="smallerScreenSearch">
+<!--        <form id="smallerScreenSearch">
             <input type="text" id="searchField" class="searchField" placeholder="Sök efter ett yrke">
             <button type="button" id="searchButton">Sök</button>
-        </form>
+        </form> -->
 
         <div class="wrapper" id="wrapper">
 
@@ -66,10 +66,6 @@
 
             <div class="right">
                 <button id="showSavedAds">VISA SPARADE ANNONSER</button>
-                <form id = "searchJob">
-                    <input type="text" id="searchField" class="searchField" placeholder="Sök efter ett yrke">
-                    <button type="button" id="searchButton">Sök</button>
-                </form>
                 <div class="categories">
                     <ul id="categoriesUl"></ul>
                 </div>
